--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
             <p>무무의 APP</p>
             <div id="iconmenu">
                 <ul>
-                    <li><a href="https://channels.vlive.tv/FE815/home"><img src="img/vapp.PNG" alt="vlive"></a></li>
-                    <li><a href="https://www.youtube.com/channel/UCdzXSux7OnRD1Cml-DQ416Q"><img src="img/yt.PNG" alt="youtube"></a></li>
-                    <li><a href="https://www.instagram.com/official_ifnt_/"><img src="img/insta.PNG" alt="instagram"></a></li>
-                    <li><a href="https://twitter.com/Official_IFNT"><img src="img/tw.PNG" alt="twitter"></a></li>
+                    <li><a href="https://channels.vlive.tv/FE815/home"><img src="img/vapp.png=" alt="vlive"></a></li>
+                    <li><a href="https://www.youtube.com/channel/UCdzXSux7OnRD1Cml-DQ416Q"><img src="img/yt.png" alt="youtube"></a></li>
+                    <li><a href="https://www.instagram.com/official_ifnt_/"><img src="img/insta.png" alt="instagram"></a></li>
+                    <li><a href="https://twitter.com/Official_IFNT"><img src="img/tw.png" alt="twitter"></a></li>
                 </ul>
             </div>
             <div id="submenu">
